@@ -12,6 +12,8 @@ Plack::Request  = 0.9967
 Plack::Response = 0.9967
 [TestRelease]
 [PkgVersion]
+[PruneFiles]
+match     = ^extensions
 
 [MetaNoIndex]
 directory = t/lib
