@@ -10,6 +10,7 @@ use Test::WWW::Mechanize::PSGI;
 use DvdDatabase;
 
 for my $controller( qw/Dvd Dvd1 Dvd2/ ){
+    warn "Testing $controller\n";
     copy('t/data/dvdzbr.db','dvdzbr.db') or die "Copy failed: $!";
 
     my $app = DvdDatabase->new()->psgi_app;
