@@ -3,7 +3,9 @@ use warnings;
 
 package MyApp::Controller;
 
-use base 'WebNano::DirController';
+use base 'WebNano::Controller';
+
+sub search_subcontrollers { 1 }
 
 sub new {
     my $class = shift;
